# Final-Project

./: .env  .gitignore  =3.0.0  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/: main.py
src/baldi_teacher/: __init__.py  audio.py  character_selector.py  characters.py  cli.py  config.py  gemini_client.py  gui.py  gui_view.py  image_overlay.py  prompting.py  teacher_bot.py  types.py
